--- a/tourapp/views/index.ejs
+++ b/tourapp/views/index.ejs
@@ -1,21 +1,34 @@
 <html>
 <head>
 
-<meta charset=utf-8 />
+<meta charset=utf-8 content="width=device-width, initial-scale=1"/>
 <title>A simple map</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src='https://api.mapbox.com/mapbox.js/v3.3.0/mapbox.js'></script>
 
-<link href='https://api.mapbox.com/mapbox.js/v3.3.0/mapbox.css' rel='stylesheet' />
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js'></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.css' rel='stylesheet' />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+<script src="/javascripts/index.js"></script>
+<script src="/javascripts/user.js"></script>
+
+<script type="text/javascript">
+  var PageData = { 
+    mapStyles: <%- JSON.stringify(mapStyle); %>
+  }
+</script>
 <style>
-  body { margin:0; margin-left: 0; padding:0; padding-left: 0;}
-  .container { margin: 0; padding: 0; width:100%;}
-  .row{ margin:0; padding:0;}
-  #map {  top:0; bottom:0; width:100%; height:100%; z-index: 0; }
+  body { margin:0; margin-left: 0; padding:0; padding-left: 0;  overflow: hidden; height: 100%; position: fixed; width: 100%; }
+  .container { margin: 0; padding: 0; max-width:100%; max-height: 100%;}
+  .row{ margin:0; padding:0; height: 100%; width: 100%;}
+  #map {  top:0; bottom:0; width:100%; height: 100%; z-index: 0; }
   .navbar-brand img {
   height: 50px;
   /* put value of image height as your need */
@@ -23,47 +36,55 @@
   margin-right: 7px;
 }
 .navbar { 
+
   padding: .1rem 1rem;
-  
+}
+.input-container {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.icon {
+  padding: 10px;
+  background: dodgerblue;
+  color: white;
+  min-width: 50px;
+  text-align: center;
 }
 </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
-    <a class="navbar-brand" href="javascript:void(0)"><img class="nav-brand" src="/images/logo.png"></a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+      <a class="navbar-brand" href="javascript:void(0)"><img class="nav-brand" src="/images/logo.png"></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navb">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+              <a href="" class="nav-link" data-toggle="modal" data-target="#modalLoginForm">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:void(0)">Link</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search">
+          <button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
+        </form>
+      </div>
+    </nav>
+<div class="container"> 
+<div class="row"> 
+  <div id="map"></div>
+</div>
+</div>
   
-    <div class="collapse navbar-collapse" id="navb">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="javascript:void(0)">Disabled</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
-      </form>
-    </div>
-  </nav>
-
-      <div id="map"></div>
   
+  <%- include modals/signin %>
+  <%- include modals/signup %>
 
-
-<script>
-L.mapbox.accessToken = 'pk.eyJ1IjoiYWZlYXRoZXIyMCIsImEiOiJjazhmaDlrYmEwNDg2M2dzMHRycG4wMXJzIn0._FYX6dOkYeSWZTCyQtZs0w';
-var map = L.mapbox.map('map')
-    .setView([47.6249, -122.5210], 12)
-    .addLayer(L.mapbox.styleLayer('mapbox://styles/mapbox/streets-v11'));
-</script>
 </body>
 </html>
 
