--- a/tourapp/views/modals/signup.ejs
+++ b/tourapp/views/modals/signup.ejs
@@ -10,30 +10,29 @@
       </div>
       <div class="modal-body mx-4">
         <div class="input-container">
-          <input type="text" id="orangeForm-name" class="form-control validate" placeholder="First Name">
+          <input type="text" id="input-first-name" class="form-control validate" placeholder="First Name">
           <div style="padding-right: 5px;"></div>
-          <input type="text" id="orangeForm-name" class="form-control validate" placeholder="Last Name">
+          <input type="text" id="input-last-name" class="form-control validate" placeholder="Last Name">
         </div>
         <div class="input-container">
             <i class="fa fa-envelope icon"></i>
-          <input type="email" id="orangeForm-email" class="form-control validate" placeholder="Email">
+          <input type="email" id="input-email" class="form-control validate" placeholder="Email">
         </div>
         <div class="input-container">
             <i class="fa fa-user icon"></i>
-            <input type="email" id="orangeForm-email" class="form-control validate" placeholder="Username">
+            <input type="email" id="input-username" class="form-control validate" placeholder="Username">
           </div>
         <div class="input-container">
             <i class="fa fa-key icon"></i>
-          <input type="password" id="orangeForm-pass" class="form-control validate" placeholder="Password">
+          <input type="password" id="input-pass" class="form-control validate" placeholder="Password">
         </div>
         <div class="input-container">
             <i class="fa fa-key icon"></i>
-            <input type="password" id="orangeForm-pass" class="form-control validate" placeholder="Confirm Password">
+            <input type="password" id="input-confirm-pass" class="form-control validate" placeholder="Confirm Password">
           </div>
-
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button id="openSignup" href="" class="btn btn-success" data-toggle="modal" data-dismiss="modal" data-target="#modalRegisterForm">Sign Up</button>
+        <button id="createAccount" href="" class="btn btn-success" data-toggle="modal" data-dismiss="modal" data-target="#modalRegisterForm">Sign Up</button>
       </div>
     </div>
   </div>
