--- a/tourapp/public/views/index.ejs
+++ b/tourapp/public/views/index.ejs
@@ -16,8 +16,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+
 <script src="/javascripts/index.js"></script>
+<script src="/javascripts/sockets.js"></script>
 <script src="/javascripts/user.js"></script>
+
 
 <script type="text/javascript">
   var PageData = { 
@@ -25,6 +29,7 @@
     userData: <%- JSON.stringify(userData); %>
   }
 </script>
+
 <style>
   body { margin:0; margin-left: 0; padding:0; padding-left: 0;  overflow: hidden; height: 100%; position: fixed; width: 100%; }
   .container { margin: 0; padding: 0; max-width:100%; max-height: 100%;}
@@ -54,6 +59,9 @@
   text-align: center;
 }
 </style>
+
+<link rel="manifest" href="../manifest.json">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
