--- a/tourapp/public/views/index.ejs
+++ b/tourapp/public/views/index.ejs
@@ -2,12 +2,21 @@
 <head>
 
 <meta charset=utf-8 content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#344" >
+
+<link rel="apple-touch-icon" href="../icons/icon-192x192.png">
 <title>A simple map</title>
 
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js'></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<noscript>
+  <!-- anchor linking to external file -->
+  <div> You have your javascript disabled</div>
+</noscript>
+
+
 
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.css' rel='stylesheet' />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
