--- a/tourapp/public/views/modals/signin.ejs
+++ b/tourapp/public/views/modals/signin.ejs
@@ -21,9 +21,15 @@
         </div>
 
       </div>
+
       <div class="modal-footer d-flex justify-content-center">
+        <% if (userData == 0) { %>
         <button id="login" class="btn btn-primary">Login</button>
+        <% } else {  %>
+        <button id="logout" class="btn btn-danger">Log Out</button>
+        <%  } %>
         <button id="openSignup" href="" class="btn btn-success" data-toggle="modal" data-dismiss="modal" data-target="#modalRegisterForm">Sign Up</button >
+        
       </div>
     </div>
   </div>
