added Socket STuff

--- a/tourapp/public/views/index.ejs
+++ b/tourapp/public/views/index.ejs
@@ -31,7 +31,8 @@
 <script type="text/javascript">
   var PageData = { 
     mapStyles: <%- JSON.stringify(mapStyle); %>,
-    userData: <%- JSON.stringify(userData); %>
+    userData: <%- JSON.stringify(userData); %>,
+    socketIpAddress: <%- JSON.stringify(socketIpAddress); %>
   }
 </script>
 
